--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>GOIT-HW-JS-10</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <ul class="index-list">
-      <li class="index-item"><a href="./1-gallery.html">1. Gallery</a></li>
-      <li class="index-item"><a href="./2-form.html">2. Form</a></li>
+      <li class="index-item"><a href="./1-timer.html">1. Timer</a></li>
+      <li class="index-item"><a href="./2-snackbar.html">2. Snackbar</a></li>
     </ul>
   </body>
 </html>
